@@ -1,8 +1,9 @@
 
-import org.junit.Test;
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.junit.Test;
 
 public class Base64Test {
 	
@@ -11,12 +12,12 @@ public class Base64Test {
 		String[] values = new String[] {
 				"飞机"
 		};
-		BASE64Encoder encoder = new BASE64Encoder();
+		Encoder encoder = Base64.getEncoder();
 		for(String value: values){
-			String encodeStr = encoder.encode(value.getBytes("UTF-8"));
-            BASE64Decoder decoder = new BASE64Decoder();
+			String encodeStr = encoder.encodeToString(value.getBytes("UTF-8"));
+			Decoder decoder = Base64.getDecoder();
 			System.out.println("编码串:" + encodeStr + "\n");
-            System.out.println("解码串:" + new String(decoder.decodeBuffer(encodeStr),"UTF-8") + "\n");
+            System.out.println("解码串:" + new String(decoder.decode(encodeStr),"UTF-8") + "\n");
 		}
 		
 //		BASE64Decoder decoder = new BASE64Decoder();
